--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,6 +15,15 @@
         android:layout_gravity="center_horizontal"
         android:src="@drawable/icon_school"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="南京信息工程大学考勤管理系统"
+        android:textSize="22sp"
+        android:textColor="@color/rdTextColorPress"
+        android:layout_gravity="center"/>
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -84,6 +93,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
+        android:layout_marginTop="25dp"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
         android:orientation="horizontal">
@@ -98,7 +108,7 @@
             android:id="@+id/tv_forget_psw"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
+            android:layout_marginLeft="20dp"
             android:text="忘记密码？"
             android:textColor="@color/hint_text_color"
             android:textSize="18sp" />
