--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -41,7 +41,7 @@
                     android:textSize="17sp" />
 
                 <EditText
-                    android:id="@+id/tv_courcode"
+                    android:id="@+id/et_courcode"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
@@ -65,7 +65,7 @@
                     android:textSize="17sp" />
 
                 <EditText
-                    android:id="@+id/tv_courname"
+                    android:id="@+id/et_courname"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
@@ -88,7 +88,7 @@
                     android:textSize="17sp" />
 
                 <EditText
-                    android:id="@+id/tv_courtime"
+                    android:id="@+id/et_courtime"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
@@ -112,7 +112,7 @@
                     android:textSize="17sp" />
 
                 <EditText
-                    android:id="@+id/courplace"
+                    android:id="@+id/et_courplace"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
@@ -122,8 +122,6 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@+id/send_task_pay_name_rl"
-
                 android:layout_width="300dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
@@ -137,7 +135,7 @@
                     android:textSize="17sp" />
 
                 <EditText
-                    android:id="@+id/send_task_pay_name"
+                    android:id="@+id/et_bookteacher"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
