--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -44,6 +44,7 @@
                     android:id="@+id/et_courcode"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
+                    android:text="aoshu123"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:background="@drawable/enter_kuang"
@@ -68,10 +69,12 @@
                     android:id="@+id/et_courname"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="13dp"
                     android:background="@drawable/enter_kuang"
-                    android:padding="5dp"/>
+                    android:padding="5dp"
+                    android:text="终极奥术上册" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -92,6 +95,7 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
+                    android:text="123456"
                     android:layout_centerVertical="true"
                     android:background="@drawable/enter_kuang"
                     android:hint=" "
@@ -116,6 +120,7 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
+                    android:text="123456"
                     android:layout_centerVertical="true"
                     android:background="@drawable/enter_kuang"
                     android:padding="5dp"/>
@@ -140,6 +145,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
+                    android:text="蒋林琼"
                     android:background="@drawable/enter_kuang"
                     android:padding="5dp"/>
             </RelativeLayout>
@@ -151,7 +157,7 @@
                 android:layout_marginTop="30dp">
 
                 <Button
-                    android:id="@+id/tv_saveinfo"
+                    android:id="@+id/btn_saveinfo"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_weight="1"
@@ -165,7 +171,7 @@
                     android:textSize="18sp" />
 
                 <Button
-                    android:id="@+id/tv_clearinfo"
+                    android:id="@+id/btn_clearinfo"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_weight="1"
