--- a/app/src/main/res/layout/activity_add_student.xml
+++ b/app/src/main/res/layout/activity_add_student.xml
@@ -78,6 +78,7 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
+                    android:text="123456"
                     android:layout_centerVertical="true"
                     android:background="@drawable/enter_kuang"
                     android:padding="5dp"/>
@@ -102,6 +103,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
+                    android:text="颠三倒"
                     android:background="@drawable/enter_kuang"
                     android:hint=" "
                     android:padding="5dp"/>
@@ -126,6 +128,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
+                    android:text="12345678"
                     android:background="@drawable/enter_kuang"
                     android:padding="5dp" />
             </RelativeLayout>
@@ -147,6 +150,7 @@
                     android:id="@+id/et_stuclass"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
+                    android:text="通信1班"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:background="@drawable/enter_kuang"
@@ -175,6 +179,7 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
+                    android:text="心电学院"
                     android:layout_centerVertical="true"
                     android:background="@drawable/enter_kuang"
                     android:padding="5dp"/>
@@ -196,6 +201,7 @@
                 <EditText
                     android:id="@+id/et_stuphone"
                     android:layout_width="200dp"
+                    android:text="18520466946"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
@@ -221,6 +227,7 @@
                     android:id="@+id/et_teaemail"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
+                    android:text="694495047@qq.com"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:background="@drawable/enter_kuang"
