--- a/app/src/main/res/layout/activity_kou_fen.xml
+++ b/app/src/main/res/layout/activity_kou_fen.xml
@@ -1,9 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jennyni.attencedemo.activity.setting.KouFenActivity">
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+
+    <include layout="@layout/main_title_bar" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="扣分设置：" />
+
+
+        <EditText
+            android:layout_width="80dp"
+            android:id="@+id/ed_percent"
+            android:layout_height="36dp" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="分/次" />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+
+        <Button
+            android:layout_width="wrap_content"
+            android:onClick="onSure"
+            android:layout_height="wrap_content"
+            android:text="确定" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:onClick="onCancle"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:text="取消" />
+    </LinearLayout>
+</LinearLayout>
