--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,6 +39,7 @@
             android:gravity="center_vertical"
             android:hint="请输入用户名"
             android:paddingLeft="8dp"
+            android:text="123456"
             android:singleLine="true"
             android:textColor="#000000"
             android:textColorHint="@color/hint_text_color"
@@ -61,6 +62,7 @@
                 android:inputType="textPassword"
                 android:paddingLeft="8dp"
                 android:singleLine="true"
+                android:text="123456"
                 android:textColor="#000000"
                 android:textColorHint="@color/hint_text_color"
                 android:textCursorDrawable="@null"
