--- a/app/src/main/res/layout/activity_kou_fen.xml
+++ b/app/src/main/res/layout/activity_kou_fen.xml
@@ -13,12 +13,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_marginTop="30dp"
         android:orientation="horizontal">
 
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="17sp"
             android:text="扣分设置：" />
 
 
@@ -31,7 +33,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="分/次" />
+            android:text="分/次"
+            android:textSize="17sp"/>
 
     </LinearLayout>
 
@@ -43,18 +46,33 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-
         <Button
-            android:layout_width="wrap_content"
             android:onClick="onSure"
-            android:layout_height="wrap_content"
-            android:text="确定" />
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginTop="15dp"
+            android:background="@android:color/holo_blue_light"
+            android:text="确   定"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
 
         <Button
-            android:layout_width="wrap_content"
             android:onClick="onCancle"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:text="取消" />
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginTop="15dp"
+            android:background="@android:color/holo_blue_light"
+            android:text="取  消"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
+
     </LinearLayout>
 </LinearLayout>
