--- a/app/src/main/res/layout/activity_add_student.xml
+++ b/app/src/main/res/layout/activity_add_student.xml
@@ -54,8 +54,7 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:entries="@array/coursetype">
+                    android:layout_centerVertical="true">
                 </Spinner>
 
             </RelativeLayout>
