--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -44,7 +44,7 @@
                     android:id="@+id/et_courcode"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:text="aoshu123"
+                    android:text="jsj123456"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:background="@drawable/enter_kuang"
@@ -73,7 +73,7 @@
                     android:layout_alignParentTop="true"
                     android:background="@drawable/enter_kuang"
                     android:padding="5dp"
-                    android:text="终极奥术上册" />
+                    android:text="计算机网络" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -94,7 +94,7 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:text="123456"
+                    android:text="12:00"
                     android:layout_centerVertical="true"
                     android:background="@drawable/enter_kuang"
                     android:hint=" "
@@ -119,7 +119,7 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:text="123456"
+                    android:text="北楼303"
                     android:layout_centerVertical="true"
                     android:background="@drawable/enter_kuang"
                     android:padding="5dp"/>
