--- a/app/src/main/res/layout/activity_query_attence.xml
+++ b/app/src/main/res/layout/activity_query_attence.xml
@@ -21,21 +21,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:text="课程编号："
+            android:text="选择课程："
             android:textSize="17sp" />
 
-        <EditText
-            android:id="@+id/et_coursecode"
+        <!--<EditText-->
+        <!--android:id="@+id/et_coursecode"-->
+        <!--android:layout_width="200dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:background="@drawable/enter_kuang"-->
+        <!--android:padding="5dp"/>-->
+
+        <Spinner
+            android:id="@+id/sp_coursetype"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/enter_kuang"
-            android:padding="5dp"
-            android:text="" />
+            android:layout_centerVertical="true">
+        </Spinner>
 
     </RelativeLayout>
-
     <RelativeLayout
         android:layout_width="300dp"
         android:layout_height="40dp"
