--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -44,7 +44,7 @@
                     android:id="@+id/et_courcode"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:text="jsj123456"
+                    android:text="15001"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:background="@drawable/enter_kuang"
@@ -73,7 +73,9 @@
                     android:layout_alignParentTop="true"
                     android:background="@drawable/enter_kuang"
                     android:padding="5dp"
-                    android:text="计算机网络" />
+                    android:text="C语言" />
+
+
             </RelativeLayout>
 
             <RelativeLayout
@@ -94,10 +96,10 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:text="12:00"
+                    android:text="周一上午"
                     android:layout_centerVertical="true"
                     android:background="@drawable/enter_kuang"
-                    android:hint=" "
+                    android:hint="如：周二上午"
                     android:padding="5dp"/>
             </RelativeLayout>
 
@@ -119,7 +121,7 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:text="北楼303"
+                    android:text="逸夫楼303"
                     android:layout_centerVertical="true"
                     android:background="@drawable/enter_kuang"
                     android:padding="5dp"/>
@@ -144,7 +146,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:text="蒋林琼"
+                    android:text="张三"
                     android:background="@drawable/enter_kuang"
                     android:padding="5dp"/>
             </RelativeLayout>
