--- a/app/src/main/res/layout/activity_dian_ming.xml
+++ b/app/src/main/res/layout/activity_dian_ming.xml
@@ -49,10 +49,17 @@
         android:orientation="horizontal">
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:onClick="startScanBluetoothMac"
-            android:text="开始点名" />
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginTop="15dp"
+            android:background="@android:color/holo_blue_light"
+            android:text="开始点名"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
 
     </LinearLayout>
 
