--- a/app/src/main/res/layout/item_course.xml
+++ b/app/src/main/res/layout/item_course.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="50dp"
     android:orientation="horizontal">
 
 
@@ -9,15 +9,18 @@
         android:id="@+id/tv_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="18sp"
+        android:text=""
         android:layout_weight="1"
         android:gravity="center"
         android:maxLines="1" />
 
 
-    <View
-        android:layout_width="1dp"
-        android:layout_height="match_parent"
-        android:background="#ddd" />
+    <!--<View-->
+        <!--android:layout_width="1dp"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:background="#ddd" />-->
 
     <TextView
         android:id="@+id/tv_name"
@@ -25,6 +28,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
+        android:textSize="18sp"
+        android:layout_gravity="center"
         android:maxLines="1" />
 
     <TextView
@@ -32,7 +37,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:textSize="18sp"
         android:gravity="center"
+        android:layout_gravity="center"
         android:maxLines="1" />
 
 </LinearLayout>
