--- a/app/src/main/res/layout/item_student.xml
+++ b/app/src/main/res/layout/item_student.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="50dp"
     android:orientation="horizontal">
-
 
     <TextView
         android:id="@+id/tv_code"
@@ -11,6 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
+        android:layout_gravity="center"
+        android:textSize="18sp"
         android:maxLines="1" />
 
 
@@ -25,6 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
-        android:maxLines="1" />
+        android:maxLines="1"
+        android:layout_gravity="center"
+        android:textSize="18sp"/>
 
 </LinearLayout>
