--- a/app/src/main/res/layout/activity_query_attence.xml
+++ b/app/src/main/res/layout/activity_query_attence.xml
@@ -64,7 +64,7 @@
             android:background="@drawable/enter_kuang"
             android:hint="请输入学号"
             android:padding="5dp"
-            android:text="20151334038"  />
+            android:text=""  />
     </RelativeLayout>
 
 
