--- a/app/src/main/res/layout/activity_query_student.xml
+++ b/app/src/main/res/layout/activity_query_student.xml
@@ -29,15 +29,21 @@
             android:layout_toRightOf="@+id/tv_1"
             android:background="@drawable/enter_kuang"
             android:padding="5dp"
-            android:text="20151334038" />
+            android:text="" />
 
 
         <Button
+            android:id="@+id/btn_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_toRightOf="@+id/et_stunum"
-            android:text="搜索" />
+            android:background="@color/colorPrimary"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:text="搜索"
+            android:textSize="16sp"
+            android:textColor="@android:color/white"/>
     </RelativeLayout>
 
     <ListView
